Changes to the map legend js and css, to fix a few small bugs in the expanding and collapsing of legend sections. Address issue #2052.

--- a/sites/all/modules/custom/group_map/key.css
+++ b/sites/all/modules/custom/group_map/key.css
@@ -21,8 +21,6 @@
 .key_genre_content {
 	display: none;	/* to hide the icons while loading */
 }
-
-
 .key_category {
 	margin-bottom: 2px;
 	margin-left: 10px;
@@ -33,9 +31,13 @@
 }
 
 
-.key_category_title {
+.key_category_title, .key_genre_title {
 	list-style-image: url(images/menu-collapsed-green.png);
 	list-style-type: none;
+}
+.key_expanded {
+  list-style-image: url(images/menu-expanded-green.png);
+  list-style-type: none;
 }
 
 
@@ -123,26 +125,25 @@ div#instruction_bubble .instructions strong {
 /* Handle custom list style arrows */
 
 /* blue */
-.key_genre_title_42_collapsed, .key_genre_title_42_expanded li.key_collapsed {
+#key_genre_title_42 , #key_genre_title_42 li.key_collapsed, #key_category_title_307, #key_category_title_307 li.key_collapsed, #key_category_title_323, #key_category_title_323.key_collapsed {
   list-style-image: url(images/menu-collapsed-blue.png);
 }
-.key_genre_title_42_expanded, .key_genre_title_42_expanded li.key_expanded {
+#key_genre_title_42.key_expanded, #key_genre_title_42 li.key_expanded, #key_category_title_307.key_expanded, #key_category_title_307 li.key_expanded, #key_category_title_323, #key_category_title_323 li.key_expanded {
   list-style-image: url(images/menu-expanded-blue.png);
 }
-
 /* green */
-.key_genre_title_43_collapsed, .key_genre_title_43_expanded li.key_collapsed {
+#key_genre_title_43, #key_genre_title_43 li.key_collapsed, #key_category_title_308, #key_category_title_308 li.key_collapsed,  #key_category_title_327, #key_category_title_327 li.key_collapsed {
   list-style-image: url(images/menu-collapsed-newgreen.png);
 }
-.key_genre_title_43_expanded, .key_genre_title_43_expanded li.key_expanded {
+#key_genre_title_43.key_expanded, #key_genre_title_43 li.key_expanded, #key_category_title_308.key_expanded, #key_category_title_308 li.key_expanded, #key_category_title_327.key_expanded, #key_category_title_327 li.key_expanded {
   list-style-image: url(images/menu-expanded-newgreen.png);
 }
-
-
 /* orange  */
-.key_genre_title_44_collapsed, .key_genre_title_44_expanded li.key_collapsed {
+#key_genre_title_44, #key_genre_title_44 li.key_collapsed, #key_category_title_310, #key_category_title_310 li.key_collapsed, #key_category_title_331, #key_category_title_331 li.key_collapsed {
   list-style-image: url(images/menu-collapsed-orange.png);
 }
-.key_genre_title_44_expanded, .key_genre_title_44_expanded li.key_expanded {
+
+#key_genre_title_44.key_expanded, #key_genre_title_44 li.key_expanded, #key_category_title_310.key_expanded, #key_category_title_310 li.key_expanded, #key_category_title_331.key_expanded, #key_category_title_331 li.key_expanded {
   list-style-image: url(images/menu-expanded-orange.png);
 }
+key_category_title key_category_title_310_collapsed key_collapsed
